--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     function initClient() {
       document.getElementById('status').textContent = "No has iniciado sesión";
+
       tokenClient = google.accounts.oauth2.initTokenClient({
         client_id: CLIENT_ID,
         scope: SCOPES,
@@ -51,7 +52,8 @@
         <p><strong>Título:</strong> <span class="titulo"></span></p>
         <p><strong>Fecha:</strong> <span class="fecha"></span></p>
         <p><strong>Etiquetas:</strong> <span class="etiquetas"></span></p>
-        <div class="content"></div>
+        <p><strong>Contenido:</strong></p>
+        <div class="content" style="border: 1px solid #ccc; padding: 5px; background: #f9f9f9;"></div>
         <p class="status-msg"></p>
         <hr>
       `;
@@ -69,7 +71,7 @@
         let textarea = container.querySelector(".post-content");
         textarea.value = text;
         extractData(container);
-        container.querySelector(".status-msg").textContent = "Código pegado correctamente.";
+        container.querySelector(".status-msg").textContent = "Código pegado";
       } catch (err) {
         alert("Error al pegar: " + err.message);
       }
@@ -81,10 +83,16 @@
       try {
         let post = JSON.parse(jsonContent);
 
-        container.querySelector(".titulo").textContent = post.title || "Sin título";
-        container.querySelector(".fecha").textContent = new Date(post.published).toLocaleString() || "Fecha no encontrada";
-        container.querySelector(".etiquetas").textContent = post.labels ? post.labels.join(", ") : "Sin etiquetas";
-        container.querySelector(".content").innerHTML = post.content || "<p>Sin contenido</p>";
+        // Validar y corregir los datos si es necesario
+        if (!post.title) post.title = "Título no encontrado";
+        if (!post.published) post.published = new Date().toISOString();
+        if (!post.labels || !Array.isArray(post.labels)) post.labels = [];
+        if (!post.content) post.content = "<p>Contenido no encontrado</p>";
+
+        container.querySelector(".titulo").textContent = post.title;
+        container.querySelector(".fecha").textContent = post.published;
+        container.querySelector(".etiquetas").textContent = post.labels.join(", ");
+        container.querySelector(".content").innerHTML = post.content;
       } catch (error) {
         alert("Error al analizar JSON: " + error.message);
       }
@@ -104,7 +112,7 @@
       document.querySelectorAll(".post-entry").forEach(entry => {
         let title = entry.querySelector(".titulo").textContent || "Sin título";
         let rawDate = entry.querySelector(".fecha").textContent || new Date().toISOString();
-        let labels = entry.querySelector(".etiquetas").textContent.split(", ").filter(tag => tag.trim() !== "");
+        let labels = entry.querySelector(".etiquetas").textContent.split(", ") || [];
         let content = entry.querySelector(".content").innerHTML || "<p>Sin contenido</p>";
 
         if (publishedTitles.has(title)) {
